@@ -200,6 +200,21 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <argLine>-Xmx2G -XX:MaxPermSize=512M</argLine>
+                    <dependenciesToScan>
+                        <dependency>org.tango-controls:rest-test-suite</dependency>
+                    </dependenciesToScan>
+                    <includes>
+                        <include>**/Rc*</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>1.12</version>
